# lenzu

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cmake_build.bat  cmake_build.sh  lenzu.sln  lenzu.vcxproj
assets/: license_en.txt  license_ja.txt
assets/fonts/: License.md
lenzu/: Cargo.toml
lenzu/src/: cursor_data.rs  image_handling.rs  interpreter_ja.rs  interpreter_traits.rs  lib.rs  main.rs  mod.rs  ocr_tesseract.rs  ocr_traits.rs  ocr_winmedia.rs
prototype/play_mp4_wgpu_winit/: Cargo.toml
prototype/play_mp4_wgpu_winit/src/: main.rs
prototype/windows/dc_demo_win/: CMakeLists.txt  dc_demo_win.cpp  dc_demo_win.h
prototype/windows/dc_demo_win_rust/: Cargo.toml
prototype/windows/dc_demo_win_rust/src/: main.rs
prototype/windows/opencv/desktop/: CMakeLists.txt  hello_world.cpp  linux_opencv_desktop.vcxproj  main  main.cpp  win_opencv_desktop.vcxproj
prototypes/kakasi/: Cargo.toml
prototypes/kakasi/src/: main.rs
prototypes/windows-rs/ocr/: Cargo.toml
src/: lenzu.rs  lib.rs  main.rs  my_desktop.rs  my_ocr.rs
src/lenzu/: Cargo.toml  lenzu.cpp  lenzu.h
src/lenzu/src/: lib.rs  main.rs  my_texture.rs
windows-rs/ocr/src/: main.rs
