[package]
name = "lenzu"
version = "0.1.0"
authors = ["Hideki A. Ikeda - hidekiai@CodeMonkeyNinja.dev@users.noreply.github.com" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
# winit=0.28 locked against wgpu=0.17
winit = "0.28"
wgpu = "0.17"
env_logger = "0.10"
log = "0.4"
# using pollster instead of tokio for calling async as blocking call
pollster = "0.3"
tesseract = "0.15.0"
snapshot = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "lenzu"
path = "src/main.rs"
