[workspace]
member = [
    # Note: If it is a crate that is based on dependencies, use 'path=' instead of workspace
    # in which 'cargo build' will make sure to build in correct order of dependency hierarchies
    # all crates defined here are independant on its own
    # Example: 'src/core/linux' and 'src/core/windows' crates should be part of the [dependencies]
    # with 'path' assignment in 'src/lenzu'
    "src/lenzu",
]
