[package]
name = "lenzu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
libc = "0.2"

[dependencies]
winit = { version = "^0.29", features = ["mint", "wayland", "x11"] }
image = "0.24.8"

# NOTE: rusty-tesseract will only install correctly IF you have MinGW64 setup correctly! (very time consuming and what a waste of time!)
rusty-tesseract = "1.1.9"

# Until prototype is done, we'll allow Windows specific code
[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.9", features = ["winuser", "winbase"] }

# Until prototype is done, we'll allow Linux specific code
[target.'cfg(linux)'.dependencies]
x11 = { version = "^2.21.0", features = ["xlib"] }
