[package]
name = "lenzu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
libc = "0.2"

[dependencies]
winit = { version = "^0.29", features = ["mint", "wayland", "x11"] }
image = "0.24.8"
kakasi = "0.1.0"

# NOTE: rusty-tesseract will only install correctly IF you have MinGW64 setup correctly! (very time consuming and what a waste of time!)
rusty-tesseract = "1.1.9"
futures = "0.3.30"
anyhow = "1.0.80"

# Until prototype is done, we'll allow Windows specific code
[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.9", features = ["winuser", "winbase"] }

# Until prototype is done, we'll allow Linux specific code
[target.'cfg(linux)'.dependencies]
x11 = { version = "^2.21.0", features = ["xlib"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Media_Ocr", 
    "Graphics_Imaging", 
    "Storage_Streams", 
    "Globalization",
    "Win32_System_SystemServices"
]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = []
