[package]
name = "play_mp4_wgpu_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg = { version = "0.3.0", features = ["build-license-nonfree", "static"] }
tokio = { version = "1.34.0", features = ["full"] }

# winit=0.28 locked against wgpu=0.17
[dependencies.wgpu]
version = "0.17"
[dependencies.winit]
version = "0.28"

