[package]
name = "sample_ocr"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3.5"

[dependencies.windows]
version = "0.54.0"
features = [
    "Media_Ocr", 
    "Graphics_Imaging", 
    "Storage_Streams", 
    "Globalization",
    "Win32_System_SystemServices"
]

[dependencies.windows-sys]
version = "0.52.0"
features = []